@@ -1,0 +1,4 @@
+
+- Add thread configuration
+- add redirect to main page
+- fix requestID, sessionID in javascript logs
